# pai-sho

./: Cargo.toml  README.md  dagger.json
.claude/commands/: release.md
.dagger/: main.go
.github/workflows/: ci.yml  release-binaries.yml
changes/: v0.1.1.md  v0.1.2.md  v0.3.0.md
src/: daemon.rs  main.rs  peer.rs
