[package]
name = "pai-sho"
version = "0.1.1"
edition = "2021"
description = "Peer-to-peer TCP port forwarding over iroh"

[dependencies]
# Networking
iroh = "0.94"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrent collections
dashmap = "6"

# Misc
rand = "0.9"

[profile.release]
lto = true
strip = true
